<resources>
    <string name="app_name">Smart Phone Tools</string>
    <string name="app_version">智能工具 (版本 1.1.2)</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="btnVersion">程序版本</string>
    <string name="service_name">MyCardEmulation</string>
    <string name="card_title">门禁开门</string>
    <string name="defaultName">张龙</string>
    <string name="title_activity_login">智能手机工具</string>

    <!-- Strings related to login -->
    <string name="prompt_email">用户名</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="strStop">停止</string>
    <string name="strStart">开始</string>
    <string name="strPause">暂停</string>
    <string name="str_Welcom3">欢迎来到界面3</string>
    <string name="strUi3">界面3</string>
    <string name="strForward">前进</string>
    <string name="strBackward">回退</string>
    <string name="strShowHideFile">显示隐藏文件</string>
    <string name="strRootdir">根目录</string>
    <string name="strDirectory">目录</string>
    <string name="strInputKey">输入搜索关键字</string>
    <string name="defaultMusic">手掌心</string>
    <string name="strGoon">继续</string>
    <string name="strScan">扫描</string>
    <string name="timeZero">00:00:00</string>
    <string name="newDir">新建文件夹</string>
    <string name="rename">重命名</string>
    <string name="delete">删除</string>
    <string name="hint_name">请输入要添加的文件夹名字</string>
    <string name="strOk">确定</string>
    <string name="deleteYes">是否真的要删除这个文件(夹)</string>
</resources>
