<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2017. ZhangLong
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    android:weightSum="1"
    tools:context=".ui.MainActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="@integer/toolbar_columns">


        <TextView
            android:id="@+id/textview_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnSpan="@integer/toolbar_columns"
            android:layout_row="1"
            android:text="@string/strDirectory" />

        <Button
            android:id="@+id/button_back"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/strBackward" />

        <Button
            android:id="@+id/button_forward"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:text="@string/strScan" />

        <Spinner
            android:id="@+id/spinner_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/searchCondition" />
        <CheckBox
            android:id="@+id/checkBox_showHideFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="false"
            android:text="@string/strShowHideFile" />

    </GridLayout>

    <EditText
        android:id="@+id/editText_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/strInputKey"
        android:imeOptions="actionDone"
        android:inputType="textPersonName" />

    <ListView
        android:id="@+id/sdFiles"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
